<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- App name -->
    <string name="app_name">Geocaching</string>

    <!-- Found page -->
    <string name="found">Found</string>
    <string name="found_time_ago">Found %1$s</string>
    <string name="view_on_map">View on map</string>

    <!-- Map page -->
    <string name="map">Map</string>
    <string name="marker_info_window_see_details">See Details<xliff:g>&#8230;</xliff:g></string>
    <string name="difficulty_out_of_five">Difficulty %1$d of 5</string>
    <string name="found_it_button_text">Found it!</string>

    <!-- Settings page -->
    <string name="settings">Settings</string>
    <string name="action_section_title">Actions</string>
    <string name="dump_cache_title">Dump Cache</string>
    <string name="dump_cache_description">Dump stored network responses to logs</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_description">Remove all stored network responses</string>

    <string name="yes_no_section_title">Yes/No Multi</string>
    <string name="yes_no_title">Yes/No</string>
    <string name="yes_no_description">Yes or No</string>
    <string name="multi_title">Multi</string>
    <string name="multi_dialog_title">Dialog</string>
    <string name="multi_dialog_default">One</string>

    <string name="map_settings_section_title">Map settings</string>
    <string name="compass_enabled_title">Compass Enabled</string>
    <string name="compass_enabled_description">Show compass in upper right corner of screen</string>
    <string name="zoom_enabled_title">Zoom Buttons Enabled</string>
    <string name="zoom_enabled_description">Show on screen zoom control buttons</string>
    <string name="location_enabled_title">Location Enabled</string>
    <string name="location_enabled_description">Show button to zoom to current location</string>
    <string name="toolbar_enabled_title">Toolbar Enabled</string>
    <string name="toolbar_enabled_description">Show directions toolbar when you select a cache</string>
</resources>
