<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="yes_no_multi_settings"
        android:title="@string/yes_no_section_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="yes_no"
            android:summary="@string/yes_no_description"
            android:title="@string/yes_no_title" />

        <ListPreference
            android:defaultValue="@string/multi_dialog_default"
            android:dependency="yes_no"
            android:dialogTitle="@string/multi_dialog_title"
            android:entries="@array/settings_multi_options"
            android:entryValues="@array/settings_multi_values"
            android:key="multiple_choice"
            android:title="@string/multi_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="map_settings"
        android:title="@string/map_settings_section_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="map_settings_compass_enabled"
            android:summary="@string/compass_enabled_description"
            android:title="@string/compass_enabled_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="map_settings_zoom_buttons_enabled"
            android:summary="@string/zoom_enabled_description"
            android:title="@string/zoom_enabled_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="map_settings_location_enabled"
            android:summary="@string/location_enabled_description"
            android:title="@string/location_enabled_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="map_settings_toolbar_enabled"
            android:summary="@string/toolbar_enabled_description"
            android:title="@string/toolbar_enabled_title" />
    </PreferenceCategory>
</PreferenceScreen>